[native] Retrieve presto native session properties
Co-authored-by: Abe Varghese Kodiyan <abe.varghese@ibm.com>
Co-authored-by: Joe Abraham <joe.abraham@ibm.com>
Co-authored-by: Deepthy Davis <deepthy.davis@ibm.com>

--- a/presto-native-execution/presto_cpp/main/CMakeLists.txt
+++ b/presto-native-execution/presto_cpp/main/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(
   ServerOperation.cpp
   SignalHandler.cpp
   SystemConnector.cpp
+  SessionProperties.cpp
   TaskManager.cpp
   TaskResource.cpp
   PeriodicHeartbeatManager.cpp
